--- a/css/carousel.css
+++ b/css/carousel.css
@@ -6,7 +6,7 @@ ul li{
 	list-style: none;
 }
 .carousel_container{
-	width: 80%;
+	width: 70%;
 	position: relative;
 	height: 16em;
 }
@@ -55,7 +55,9 @@ ul li{
 	-webkit-transform:rotate(45deg);
 }
 .carousel_pics{
-	/*text-align: center;*/
+	width: 100%;
+	height: 100%;
+	position: absolute;
 }
 .carousel_list{
 
