--- a/css/carousel.css
+++ b/css/carousel.css
@@ -13,11 +13,11 @@ ul li{
 .carousel_btn{
 	display: inline-block;
 	z-index: 10;
-	background-color: #111;
-	width: 10%;
+	/*background-color: #111;*/
+	width: 18%;
 	position: absolute;
 	height: 100%;
-	opacity: .5;
+	opacity: .8;
 }
 .carousel_btn.prev_btn{
 	left: 0;
@@ -27,7 +27,7 @@ ul li{
 }
 .prev_icon,.next_icon{
 	border-radius:50%; 
-	border: 2px solid #fff;
+	/*border: 2px solid #fff;*/
 	display: inline-block;
 	width: 2em;height: 2em;
 	position: absolute;
@@ -42,16 +42,16 @@ ul li{
 	content: '';display: inline-block;
 	margin-left: 5px;
 	width: 1em;height: 1em;
-	border-left: 2px solid #fff;
-	border-bottom: 2px solid #fff;
+	border-left: 4px solid #fff;
+	border-bottom: 4px solid #fff;
 	-webkit-transform:rotate(45deg);
 }
 .next_icon:before{
 	content: '';display: inline-block;
 	margin-left: -5px;
 	width: 1em;height: 1em;
-	border-right: 2px solid #fff;
-	border-top: 2px solid #fff;
+	border-right: 4px solid #fff;
+	border-top: 4px solid #fff;
 	-webkit-transform:rotate(45deg);
 }
 .carousel_pics{
@@ -62,6 +62,13 @@ ul li{
 .carousel_list{
 
 }
-.carousel_item{
+/*.carousel_item{
 	position: absolute;
+	width: 100%;
+	height: 100%;
+}*/
+.carousel_item>a{
+	position: absolute;
+	width: 100%;
+	height: 100%;
 }
